ipc/ipdl/test/ipdl/ok/PmultipleUsingCxxTypes.ipdl
using struct mozilla::void_t from "ipc/IPCMessageUtils.h";
using struct mozilla::void_t from "ipc/IPCMessageUtils.h";

protocol PmultipleUsingCxxTypes {
child:
    async Msg(void_t foo);
};
